Added firebase config

--- a/angular.json
+++ b/angular.json
@@ -121,8 +121,13 @@
               "devServerTarget": "control-de-gastos:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "control-de-gastos"
 }
